--- a/imgui.ini
+++ b/imgui.ini
@@ -14,8 +14,8 @@ Size=355,598
 Collapsed=0
 
 [Window][Scene Details]
-Pos=979,75
-Size=761,770
+Pos=1238,30
+Size=447,736
 Collapsed=1
 
 [Window][Example: Console]
@@ -37,6 +37,11 @@ Collapsed=0
 Pos=60,60
 Size=520,600
 Collapsed=0
+
+[Window][teste positions]
+Pos=51,8
+Size=1534,172
+Collapsed=1
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
